--- a/Main/LoginPage/index.html
+++ b/Main/LoginPage/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
 
-    <header>
-        <div class="container">
-          <div class="header-left">
-            <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-          </div>
-          <div class="header-right">
-            <a href="#" class="login">Log in</a>
-          </div>
-        </div>
-      </header>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <img class="logo" src="https://raw.githubusercontent.com/Thepetapixl/Smart-Parking-Website/main/Main/Resources/Logo.png?token=AOPOTTQBMHYVPL3SPDWEJQDAJSBAG">
+      </div>
+      <div class="header-right">
+        <a href="#" class="login">Log in</a>
+      </div>
+    </div>
+  </header>
     
     
 </body>
