--- a/Main/IndexPage/Main.html
+++ b/Main/IndexPage/Main.html
@@ -16,12 +16,12 @@
 
 <body>
   <section id="banner">
-   <img id="logo" src="Images/1.png", alt="Logo of the Website" height="100px" width="240px">
+   <img id="logo" src="Resources\1.png", alt="Logo of the Website" height="100px" width="240px">
 
    <div id="myNav" class="overlay">
      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
      <div class="overlay-content">
-       <a href = "Login.html" onclick="closeNav()">LogIn</a>
+       <a href = "Main/Login.html" onclick="closeNav()">LogIn</a>
        <a href = "#banner" onclick="closeNav()">Home</a>
        <a href = "#info" onclick="closeNav()">About </a>
        <a href = "#Stats" onclick="closeNav()">Statistics </a> 
