--- a/Main/IndexPage/Main.html
+++ b/Main/IndexPage/Main.html
@@ -21,7 +21,7 @@
    <div id="myNav" class="overlay">
      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
      <div class="overlay-content">
-       <a href = "Main/Login.html" onclick="closeNav()">LogIn</a>
+       <a href = "../LoginPage/Login.html" onclick="closeNav()">LogIn</a>
        <a href = "#banner" onclick="closeNav()">Home</a>
        <a href = "#info" onclick="closeNav()">About </a>
        <a href = "#Stats" onclick="closeNav()">Statistics </a> 
@@ -47,7 +47,7 @@
      <h1>Easy Parking</h1>
      <p>Just the way you wanted</p>
          <div class="b_button">
-             <a href="maps.html"><span></span>Park Car</a>
+             <a href="../MapsPage/maps.html"><span></span>Park Car</a>
              <a href="#"><span></span>Drive Out</a>
          </div>
    </div>
