Added files and edited codes

--- a/Main/IndexPage/Main.html
+++ b/Main/IndexPage/Main.html
@@ -16,15 +16,15 @@
 
 <body>
   <section id="banner">
-   <img id="logo" src="Resources\1.png", alt="Logo of the Website" height="100px" width="240px">
+   <img id="logo" src="../Resources/1.png", alt="Logo of the Website" height="100px" width="240px">
 
    <div id="myNav" class="overlay">
      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
      <div class="overlay-content">
        <a href = "../LoginPage/Login.html" onclick="closeNav()">LogIn</a>
        <a href = "#banner" onclick="closeNav()">Home</a>
-       <a href = "#info" onclick="closeNav()">About </a>
-       <a href = "#Stats" onclick="closeNav()">Statistics </a> 
+       <a href = "#info" onclick="closeNav()">Features </a>
+       <a href = "#creation" onclick="closeNav()">About Us </a> 
        <a href = "#footer" onclick="closeNav()">Contact Us</a>
 
 
@@ -56,15 +56,16 @@
     <br>
 <section id="info">
   <div>
-    <p>About Us</p>
-    <h3>Hello</h3>
+    <p>Features</p>
+  </div>
+
   </div>
 </section>
 
-<section id="stats">
-  <div>
-    <p>Statistics</p>
-    <h3>Hello</h3>
+<section id="creation">
+  <div class="title_text">
+    <p>Services</p>
+    <h2>We provide</h2>
   </div>
 </section>
 
