--- a/Main/SignUp/forgotpassword.html
+++ b/Main/SignUp/forgotpassword.html
@@ -46,7 +46,7 @@
                         <button class="btn btn-login" type="submit">Back to Login</button> 
                 </div>
                 <p1>
-                    Here by mistake?<a href="Login.html">Go back</a>
+                    Here by mistake?<a href="../LoginPage/Login.html">Go back</a>
                 </p1>
 
                 <div>
