--- a/Main/SignUp/signup.html
+++ b/Main/SignUp/signup.html
@@ -29,12 +29,12 @@
 <body>
     <section id="S_Banner">
 
-            <img id="logo" src="Images/1.png", alt="Logo of the Website" height="120px" width="260px" id=Logo>
+            <img id="logo" src="../Resources/1.png", alt="Logo of the Website" height="120px" width="260px" id=Logo>
 
             <div id="myNav" class="overlay">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <div class="overlay-content">
-                  <a href = "Main.html" onclick="closeNav()">Home</a>
+                  <a href = "../IndexPage/Main.html" onclick="closeNav()">Home</a>
                   <a href = "#footer" onclick="closeNav()">Contact Us </a>        
                 </div>
               </div>
@@ -86,7 +86,7 @@
         
                             <div class="card-footer">
                                 <div class="d-flex justify-content-center links">
-                                    Already have an account?<a href="Login.html">Login</a>
+                                    Already have an account?<a href="../LoginPage/Login.html">Login</a>
                                 </div>
                             </div>
                         </div>
