--- a/Main/IndexPage/Main.html
+++ b/Main/IndexPage/Main.html
@@ -24,7 +24,8 @@
        <a href = "../LoginPage/Login.html" onclick="closeNav()">LogIn</a>
        <a href = "#banner" onclick="closeNav()">Home</a>
        <a href = "#info" onclick="closeNav()">Features </a>
-       <a href = "#creation" onclick="closeNav()">About Us </a> 
+       <a href = "#creation" onclick="closeNav()">About Us </a>
+       <a href = "../Reviews/Review.html" onclick="closeNav()">Reviews </a>
        <a href = "#footer" onclick="closeNav()">Contact Us</a>
 
 
@@ -34,9 +35,9 @@
    <span id="span" style="font-size:40px; cursor:pointer" onclick="openNav()">&#9776; </span>
    
    <script>
-   function openNav() {
-     document.getElementById("myNav").style.width = "20%";
-   }
+      function openNav() {
+        document.getElementById("myNav").style.width = "20%";
+     }
    
    function closeNav() {
      document.getElementById("myNav").style.width = "0%";
@@ -53,34 +54,132 @@
    </div>
    </section> 
 
-    <br>
-<section id="info">
-  <div>
-    <p>Features</p>
-  </div>
+   <section id="features">
+    <div class="title_text">
+      <p>Features</p>
+      <h1>Why Choose Us</h1>
+    </div>
 
+
+  <div class="feature-box">
+      <div class="features">
+          <h1>Find you a perfect parking spot</h1>
+          <div class="features-desc">
+              <div class="feature-icon">
+                  <i class="fa fa-map-marker-alt"></i>
+              </div>
+              <div class="feature-text">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Sed iaculis sagittis tortor nec hendrerit. Lorem ipsum dolor sit amet, 
+                      consectetur adipiscing elit. Sed eu metus in ante facilisis hendrerit.
+                      Suspendisse maximus, sapien vitae tempus scelerisque
+                  </p>
+              </div>
+          </div>
+
+          <h1>Pre-booking Online</h1>
+          <div class="features-desc">
+              <div class="feature-icon">
+                  <i class="fa fa-check-circle"></i>
+              </div>
+              <div class="feature-text">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Sed iaculis sagittis tortor nec hendrerit. Lorem ipsum dolor sit amet, 
+                      consectetur adipiscing elit. Sed eu metus in ante facilisis hendrerit.
+                      Suspendisse maximus, sapien vitae tempus scelerisque
+                  </p>
+              </div>
+          </div>
+
+          <h1>Face Recognition</h1>
+          <div class="features-desc">
+              <div class="feature-icon">
+                  <i class="fa fa-id-badge"></i>
+              </div>
+              <div class="feature-text">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Sed iaculis sagittis tortor nec hendrerit. Lorem ipsum dolor sit amet, 
+                      consectetur adipiscing elit. Sed eu metus in ante facilisis hendrerit.
+                      Suspendisse maximus, sapien vitae tempus scelerisque
+                  </p>
+              </div>
+          </div>
+
+          <h1>User Profile Updation</h1>
+          <div class="features-desc">
+              <div class="feature-icon">
+                  <i class="fa fa-user-edit"></i>
+              </div>
+              <div class="feature-text">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Sed iaculis sagittis tortor nec hendrerit. Lorem ipsum dolor sit amet, 
+                      consectetur adipiscing elit. Sed eu metus in ante facilisis hendrerit.
+                      Suspendisse maximus, sapien vitae tempus scelerisque
+                  </p>
+              </div>
+          </div>
+
+          <h1>Analysis</h1>
+          <div class="features-desc">
+              <div class="feature-icon">
+                  <i class="fa fa-chart-bar"></i>
+              </div>
+              <div class="feature-text">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                      Sed iaculis sagittis tortor nec hendrerit. Lorem ipsum dolor sit amet, 
+                      consectetur adipiscing elit. Sed eu metus in ante facilisis hendrerit.
+                      Suspendisse maximus, sapien vitae tempus scelerisque
+                  </p>
+              </div>
+          </div>
+      </div>
+
+      <div class="feature-img">
+          <img src="../Resources/parkingimg.jpg">
+      </div>
   </div>
+</section>   
+
+<br><br><br><br>
+
+<section id="Team">
+    <div class="title_text">
+      <p>Our Team</p>
+      <h1>Meet us </h1>
+    </div>
+    <div class="Photos">
+        <div class="Photos_T">
+            <img src="../Resources/Rupesh.jpg">
+            <div class="Photos_S"></div>
+        </div>
+            
+        <div class="Photos_T">
+            <img src="../Resources/Apurv.png">
+            <div class="Photos_S"></div>
+        </div>  
+        
+        <div class="Photos_T">
+            <img src="../Resources/Mish2.jpeg">
+            <div class="Photos_S"></div>
+        </div>
+   
+        <div class="Photos_T">
+            <img src="../Resources/Rutika.jpeg">
+            <div class="Photos_S"></div>
+        </div>
+    </div>
 </section>
-
-<section id="creation">
-  <div class="title_text">
-    <p>Services</p>
-    <h2>We provide</h2>
-  </div>
-</section>
-
-
 
 <section id=footer>
   <div class="title_text">
     <p>CONTACT US</p>
-    <h3> Visit Our Website Today</h3>
+    <h1> Visit Our Website Today</h1>
   </div>
 
 <div class="footer_row">
 <div class="footer_left">
   <h1>Working Hours</h1>
-  <p><i class="fas fa-clock"></i>Monday to Friday- 7:00 am to 5:00 pm</p>
+  <p><i class="fas fa-clock"></i>Monday to Friday - 7:00 am to 5:00 pm</p>
   <p> <i class="fas fa-clock"></i>Saturday and Sunday - 7:00 am to 12:00 pm</p>
 
 </div>
@@ -106,13 +205,5 @@
 
     </body>
 </html>
-
-
-
-
-
-
-
-
 
 
