--- a/Main/IndexPage/Main.html
+++ b/Main/IndexPage/Main.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+
+    <!--Banner Section Starts-->
+
   <section id="banner">
    <img id="logo" src="../Resources/1.png", alt="Logo of the Website" height="100px" width="240px">
 
@@ -23,8 +26,8 @@
      <div class="overlay-content">
        <a href = "#banner" onclick="closeNav()">Home</a>
        <a href="../LoginPage/Login.html" onclick="closeNav()">LogIn</a>
-       <a href = "#info" onclick="closeNav()">Features </a>
-       <a href = "#creation" onclick="closeNav()">About Us </a>
+       <a href = "#features" onclick="closeNav()">Features </a>
+       <a href = "#Team" onclick="closeNav()">About Us </a>
        <a href = "../Reviews/Review.html" onclick="closeNav()">Reviews </a>
        <a href = "#footer" onclick="closeNav()">Contact Us</a>
 
@@ -52,6 +55,10 @@
          </div>
    </div>
    </section> 
+
+   <!--Banner Section Ends-->
+
+   <!--Features Section Starts-->
 
    <section id="features">
     <div class="title_text">
@@ -121,7 +128,11 @@
   </div>
 </section>   
 
+   <!--Features Section Ends-->
+
 <br><br><br><br>
+
+   <!--Team Section Starts-->
 
 <section id="Team">
     <div class="title_text">
@@ -176,6 +187,10 @@
 
 </section>
 
+   <!--Team Section Ends-->
+
+   <!--Footer Section Starts-->
+
 
 <section id=footer>
   <div class="title_text">
@@ -208,6 +223,8 @@
 </div>
 
 </section>
+
+<!--Footer Section Ends-->
   
 
     </body>
